@@ -222,6 +222,9 @@
 											--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED
 											--add-opens=java.base/sun.nio.ch=ALL-UNNAMED
 											--add-opens=java.base/sun.util.calendar=ALL-UNNAMED
+											-XX:+UseZGC
+											-XX:+ZGenerational
+											-XX:+ExitOnOutOfMemoryError
 										</argument>
 									</arguments>
 								</configuration>
